--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,39 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.16
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
 asgiref==3.8.1
+attrs==25.3.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+distro==1.9.0
 Django==5.1.7
 django-cors-headers==4.7.0
 django-environ==0.12.0
 djangorestframework==3.16.0
-psycopg2-binary==2.9.10
-sqlparse==0.5.3
-Pillow==10.0.0
-openai==0.27.0
-requests==2.31.0
 drf-nested-routers==0.94.1
+frozenlist==1.5.0
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
+idna==3.10
+jiter==0.9.0
+multidict==6.4.3
+numpy==2.2.4
+openai==1.74.0
+packaging==24.2
+Pillow==10.0.0
+propcache==0.3.1
+psycopg2-binary==2.9.10
+pydantic==2.11.3
+pydantic_core==2.33.1
+requests==2.31.0
+sniffio==1.3.1
+sqlparse==0.5.3
+tqdm==4.67.1
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+urllib3==2.4.0
+yarl==1.19.0
